--- a/app/css/_helpers.scss
+++ b/app/css/_helpers.scss
@@ -23,6 +23,7 @@
   $h2:$height/2 !global;
   $h3:$height/3 !global;
   $h4:$height/4 !global;
+  $h6:$height/6 !global;
   $h7:$height/7 !global;
   $h10:$height/10 !global;
   $h11:$height/11 !global;
