--- a/app/css/_flags.scss
+++ b/app/css/_flags.scss
@@ -25,8 +25,7 @@
   @include ratio(5/7);
   background:#E41E20;
   &:before {
-    @include centered-symbol($UTF8_COUNTRY_ALB, black);
-    font-size:2 * $h3;
+    @include centered-symbol($UTF8_COUNTRY_ALB, black, 2 * $h3);
   }
 };
 // Algeria
@@ -40,8 +39,7 @@
     box-shadow:-($w30 + 1)  0px 0px $w30 #D21034; 
   }
   &:after {
-    @include symbol($UTF8_BLACK_STAR, #D21034); 
-    font-size:5 * $w30;
+    @include symbol($UTF8_BLACK_STAR, #D21034, 5 * $w30); 
     top:7.5 * $w30 - 3px;
     left:15 * $w30 - 3px;
     transform:rotate(15deg);
@@ -77,8 +75,7 @@
   @include ratio(2/3);
   @include two-lines(#CE1126, #000000);
   &:before {
-    @include centered-symbol($UTF8_COUNTRY_AGO, #F9D616); 
-    font-size:2 * $h3;
+    @include centered-symbol($UTF8_COUNTRY_AGO, #F9D616, 2 * $h3); 
   }
 };
 // Anguilla
@@ -234,8 +231,7 @@
   @include ratio(1/2);
   @include columns(#FF0000, $w4, white, $w2, #FF0000, $w4);
   &:before {
-    @include centered-symbol($UTF8_MAPLE_LEAF, #FF0000);
-    font-size:5em;
+    @include centered-symbol($UTF8_MAPLE_LEAF, #FF0000, 5em);
   }
 };
 // Canary Islands
