--- a/app/css/_helpers.scss
+++ b/app/css/_helpers.scss
@@ -31,6 +31,7 @@
   $h16:$height/16 !global;
   $h18:$height/18 !global;
   $h20:$height/20 !global;
+  $h24:$height/24 !global;
   $h28:$height/28 !global;
   $h30:$height/30 !global;
   $h34:$height/34 !global;
