--- a/app/css/_flags.scss
+++ b/app/css/_flags.scss
@@ -145,8 +145,18 @@
   @include ratio(2/3);
 };
 // Bahrain
+// http://en.wikipedia.org/wiki/Flag_of_Bahrain
 .flag-bhr {
-  @include ratio(2/3);
+  @include ratio(3/5);
+  @include columns(white, 2.5 * $w10, #c8102e, 7.5 * $w10);
+  &:before {
+    @include losange($h5, 3 * $w10, white);
+    left:$w10;
+    box-shadow:1em 1em 0px white,
+               2em 2em 0px white,
+               3em 3em 0px white,
+               4em 4em 0px white;
+  }
 };
 // Bangladesh
 // http://en.wikipedia.org/wiki/Flag_of_Bangladesh
@@ -1065,20 +1075,16 @@
 };
 // Saint Vincent and the Grenadines
 // http://en.wikipedia.org/wiki/Flag_of_Saint_Vincent_and_the_Grenadines
+// http://www.vexilla-mundi.com/saint_vincent_and_the_grenadines_flag.html
 .flag-vct {
-  @include secondary();
   @include ratio(1/2);
   @include columns(#0072C6, $w4, #FCD116, $w2, #009E60, $w4);
   &:before {
-    @include losange($w8, #009E60);
-    position:absolute;
-    content:"";
-    top:50%;
-    left:50%;
-    margin-top:$w8 / 2;
-    margin-left:-$w8 / 2;
-    box-shadow:(-$w8 - 5px) 0px 0px #009E60, 
-                0px (-$w8 - 5px) 0px #009E60;
+    @include losange($h3, $h6, #009E60);
+    top:$h2 + $h24;
+    left:$w2 - $h12;
+    box-shadow:-1.2em 0px 0px #009E60, 
+                0px -1.2em 0px #009E60;
   }
 };
 // Samoa
