--- a/app/css/_helpers.scss
+++ b/app/css/_helpers.scss
@@ -35,6 +35,7 @@
   $h6:$height/6 !global;
   $h7:$height/7 !global;
   $h8:$height/8 !global;
+  $h9:$height/9 !global;
   $h10:$height/10 !global;
   $h11:$height/11 !global;
   $h12:$height/12 !global;
@@ -61,6 +62,7 @@
   $w22:$width/22 !global;
   $w23:$width/23 !global;
   $w25:$width/25 !global;
+  $w28:$width/28 !global;
   $w30:$width/30 !global;
   $w32:$width/32 !global;
   $w37:$width/37 !global;
