--- a/app/css/_helpers.scss
+++ b/app/css/_helpers.scss
@@ -59,6 +59,7 @@
   $w12:$width/12 !global;
   $w16:$width/16 !global;
   $w18:$width/18 !global;
+  $w20:$width/20 !global;
   $w22:$width/22 !global;
   $w23:$width/23 !global;
   $w25:$width/25 !global;
