--- a/app/css/_helpers.scss
+++ b/app/css/_helpers.scss
@@ -113,7 +113,7 @@
 
 // Lines
 @mixin lines($args...) {
-  // Defaul values
+  // Default values
   $_offset:0px;
   $_color:transparent;
   $_result: ();
